--- a/flex-4.html
+++ b/flex-4.html
@@ -25,10 +25,14 @@
 <div class="item">荷花</div>
 <div class="item">雞蛋花</div>
 <div class="item">
-    <img src="123.jpg" >
+    <img src="123.jpg"width="250px"height="150px" >
 </div>
-<div class="item">11</div>
-<div class="item">11</div>
+<div class="item">
+    <img src="456.jpg"width="250px"height="150px" >
+</div>
+<div class="item">
+    <img src="789.jpg"width="250px"height="150px" >
+</div>
 </div>
 </body>
 </html>
